tests/fails/f10.t

terra foo()
    var a  = ({0, a = 3}):as(int[2]).a
end
foo()